--- a/semana-1/tema-1/ejemplo-jsportfolio/package.json
+++ b/semana-1/tema-1/ejemplo-jsportfolio/package.json
@@ -25,6 +25,7 @@
     "webpack": "^5.88.2"
   },
   "devDependencies": {
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "webpack-cli": "^5.1.4"
   }
